<resources>
    <string name="app_name">PomoBox</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_eishenhower_box">Eishenhower Box</string>
    <string name="menu_pomodoro">Pomodoro</string>
    <string name="menu_mini_task">Mini Tasks</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_help">Helps</string>
    <string name="menu_about">About</string>

    <string name="label_pomodoro">PomoBox</string>
    <string name="menu_divide_extension">Extension</string>
    <string name="title_mini_task">Title Mini Tasks</string>
    <string name="description_mini_tasks">Description Mini Tasks</string>
    <string name="default_task_process">0/5</string>
    <string name="des_button_drag_task">button_drag_task</string>
    <string name="des_button_do_pomodoro">button_do_pomodoro</string>
    <string name="des_button_add_mini_task">button_add_mini_task</string>
    <string name="title_add_new_mini_task">Add new mini task</string>

    <string-array name="options_array">
        <item>Eishenhower Box</item>
        <item>Pomodoro</item>
        <item>Mini Tasks</item>
        <item>Settings</item>
        <item>Helps</item>
        <item>About</item>
    </string-array>


    <string name="text_create_new_task">Create New Task</string>
    <string name="your_task_name">Your Task Name</string>
    <string name="enter_your_title_task">Enter your title task</string>
    <string name="your_task_description">Your Task Description</string>
    <string name="enter_you_task_description">Enter you task description</string>
    <string name="expected_pomodoro">Expected Pomodoro</string>
    <string name="button_create">Create</string>
    <string name="button_update">Update</string>
    <string name="button_back">Back</string>
    <string name="warning_title_empty">Please enter the task title!</string>
    <string name="toast_created">Created!</string>
    <string name="default_one">1</string>
    <string name="default_two_five">2/5</string>
    <string name="default_five">5</string>
    <string name="toast_delete">Deleted!</string>
    <string name="ask_for_delete">Are you sure to delete?</string>
    <string name="alert_yes">Yes</string>
    <string name="alert_no">No</string>
    <string name="separate_progress">/</string>
    <string name="query_equal"> == </string>
    <string name="title_mini_task_update">Mini Task Title</string>
    <string name="progress_mini_task">Progress Mini Task</string>
    <string name="toast_updated">Updated!</string>
    <string name="update_failure">Something went wrong, Update fail!</string>

</resources>
