<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_aishenhower"
            android:icon="@drawable/ic_menu_eishenhower_box"
            android:title="@string/menu_eishenhower_box" />
        <item
            android:id="@+id/nav_pomodoro"
            android:icon="@drawable/ic_menu_pomodoro"
            android:title="@string/menu_pomodoro" />
        <item
            android:id="@+id/nav_mini_tasks"
            android:icon="@drawable/ic_menu_mini_task"
            android:title="@string/menu_mini_task" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_setting"
            android:title="@string/menu_setting" />
    </group>

    <item android:title="@string/menu_divide_extension">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_help"
                    android:icon="@drawable/ic_menu_help"
                    android:title="@string/menu_help" />
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_menu_about"
                    android:title="@string/menu_about" />
            </group>
        </menu>
    </item>

</menu>
