<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/color_yellow_pale_goldenrod"
    android:minWidth="@dimen/min_width_dialog"
    android:minHeight="@dimen/min_height_dialog">

    <TextView
        android:id="@+id/text_add_mini_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/color_yellow_mustard"
        android:paddingStart="@dimen/dp_16"
        android:paddingLeft="@dimen/dp_16"
        android:text="@string/title_add_new_mini_task"
        android:textColor="@color/color_orange_rich_gold"
        android:textSize="@dimen/sp_30"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/text_fill_content_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/your_task_description"
        android:textColor="@color/color_orange_rich_gold"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/text_enter_title_task"
        app:layout_constraintTop_toBottomOf="@+id/text_enter_title_task" />

    <EditText
        android:id="@+id/text_enter_title_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_8"
        android:ems="10"
        android:hint="@string/enter_your_title_task"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:text=""
        android:textColor="@color/color_orange_rich_gold"
        android:textColorHint="@color/color_gray_nobel"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text_fill_title_task"
        app:layout_constraintTop_toBottomOf="@+id/text_fill_title_task"
        tools:ignore="Autofill" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <TextView
        android:id="@+id/text_fill_title_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/your_task_name"
        android:textColor="@color/color_orange_rich_gold"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/text_add_mini_task" />

    <EditText
        android:id="@+id/text_enter_content_task"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_100"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_8"
        android:ems="10"
        android:hint="@string/enter_you_task_description"
        android:inputType="textMultiLine"
        android:textColor="@color/color_orange_rich_gold"
        android:textColorHint="@color/color_gray_nobel"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/text_fill_content_task"
        app:layout_constraintTop_toBottomOf="@+id/text_fill_content_task"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/text_fill_target_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/expected_pomodoro"
        android:textColor="@color/color_orange_rich_gold"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/text_enter_content_task"
        app:layout_constraintTop_toBottomOf="@+id/text_enter_content_task" />

    <TextView
        android:id="@+id/text_show_target_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_one"
        android:textColor="@color/color_orange_rich_gold"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/seekbar_target_pomodoro"
        app:layout_constraintStart_toEndOf="@+id/seekbar_target_pomodoro"
        app:layout_constraintTop_toTopOf="@+id/seekbar_target_pomodoro"
        app:layout_constraintVertical_bias="1.0" />

    <SeekBar
        android:id="@+id/seekbar_target_pomodoro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:thumb="@drawable/ic_clock"
        app:layout_constraintEnd_toEndOf="@+id/text_fill_target_task"
        app:layout_constraintStart_toStartOf="@+id/text_fill_target_task"
        app:layout_constraintTop_toBottomOf="@+id/text_fill_target_task" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <Button
        android:id="@+id/button_create_task"
        style="@style/ButtonTemplate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_16"
        android:text="@string/button_create"
        android:textSize="@dimen/sp_20"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/seekbar_target_pomodoro" />
</android.support.constraint.ConstraintLayout>
