<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_yellow_pale_goldenrod"
    android:minWidth="@dimen/min_width_dialog"
    android:minHeight="@dimen/min_height_dialog">

    <EditText
        android:id="@+id/text_update_title_mini_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:background="@color/color_yellow_mustard"
        android:inputType="text"
        android:padding="@dimen/dp_8"
        android:paddingStart="@dimen/dp_16"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:text="@string/title_mini_task_update"
        android:textColor="@color/color_orange_rich_gold"
        android:textSize="@dimen/sp_24"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,LabelFor,RtlSymmetry" />

    <SeekBar
        android:id="@+id/seekbar_target_pomodoro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:thumb="@drawable/ic_clock"
        app:layout_constraintEnd_toEndOf="@+id/text_progress_mini_task"
        app:layout_constraintStart_toStartOf="@+id/text_target_mini_task"
        app:layout_constraintTop_toBottomOf="@+id/text_target_mini_task" />

    <TextView
        android:id="@+id/text_show_target_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_8"
        android:text="@string/default_five"
        android:textColor="@color/color_orange_rich_gold"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/seekbar_target_pomodoro"
        app:layout_constraintStart_toEndOf="@+id/seekbar_target_pomodoro"
        app:layout_constraintTop_toBottomOf="@+id/text_target_mini_task" />

    <TextView
        android:id="@+id/text_target_mini_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/expected_pomodoro"
        android:textColor="@color/color_orange_rich_gold"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/seekbar_progress_pomodoro"
        app:layout_constraintTop_toBottomOf="@+id/seekbar_progress_pomodoro" />

    <TextView
        android:id="@+id/text_title_mini_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_16"
        android:background="@color/color_yellow_mustard"
        android:padding="@dimen/dp_8"
        android:paddingStart="@dimen/dp_16"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:text="@string/title_mini_task_update"
        android:textColor="@color/color_orange_rich_gold"
        android:textSize="@dimen/sp_24"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/text_fill_content_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/your_task_description"
        android:textColor="@color/color_orange_rich_gold"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/text_title_mini_task" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <EditText
        android:id="@+id/text_update_content_task"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_200"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_8"
        android:hint="@string/enter_you_task_description"
        android:inputType="textMultiLine"
        android:textColor="@color/color_orange_rich_gold"
        android:textColorHint="@color/color_gray_nobel"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/text_fill_content_task"
        app:layout_constraintTop_toBottomOf="@+id/text_fill_content_task"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/text_progress_mini_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/progress_mini_task"
        android:textColor="@color/color_orange_rich_gold"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/text_update_content_task"
        app:layout_constraintTop_toBottomOf="@+id/text_update_content_task" />

    <TextView
        android:id="@+id/text_show_progress_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_8"
        android:text="@string/default_two_five"
        android:textColor="@color/color_orange_rich_gold"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/seekbar_progress_pomodoro"
        app:layout_constraintStart_toEndOf="@+id/seekbar_progress_pomodoro"
        app:layout_constraintTop_toTopOf="@+id/seekbar_progress_pomodoro"
        app:layout_constraintVertical_bias="1.0" />

    <SeekBar
        android:id="@+id/seekbar_progress_pomodoro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:thumb="@drawable/ic_done"
        app:layout_constraintEnd_toEndOf="@+id/text_progress_mini_task"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text_progress_mini_task"
        app:layout_constraintTop_toBottomOf="@+id/text_progress_mini_task" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <Button
        android:id="@+id/button_update_task"
        style="@style/ButtonTemplate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_16"
        android:text="@string/button_update"
        android:textSize="@dimen/sp_20"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/seekbar_target_pomodoro" />

    <Button
        android:id="@+id/button_back"
        style="@style/ButtonTemplate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_16"
        android:text="@string/button_back"
        android:textSize="@dimen/sp_20"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/seekbar_target_pomodoro" />

    <ImageButton
        android:id="@+id/button_edit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:background="@color/color_transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_title_mini_task"
        app:srcCompat="@drawable/ic_edit"
        tools:ignore="ContentDescription,VectorDrawableCompat" />
</android.support.constraint.ConstraintLayout>
